# DOUMEKI

./: CMakeLists.txt  CMakeLists_orig.txt  Doumeki_DEgg.cc  Doumeki_DOM.cc  Doumeki_LOM.cc  Doumeki_MEgg.cc  Makefile  README  RELEASENOTE  env.sh  memo.txt  modify.sh
calc_acceptance/: modify.py  modify2.py
doc/: ChangeLog  J4Timer  README  addfile.txt  diff.txt  modifiedfile.txt  removedfile.txt
sources/: CMakeLists.txt  org
sources/degg/: CMakeLists.txt
sources/degg/.svn/: entries
sources/degg/include/: J4DEgg.hh  J4DEggGel.hh  J4DEggGelHit.hh  J4DEggGelSD.hh  J4DEggInside.hh  J4DEggInsideHit.hh  J4DEggInsideSD.hh  J4DEggParameterList.hh  J4DEggShield.hh
sources/degg/include/.svn/: entries
sources/degg/include/.svn/text-base/: J4DOMPMTSD.hh.svn-base  J4DOMPhotoCathode.hh.svn-base  J4VDOMDetectorComponent.hh.svn-base
sources/degg/src/: J4DEgg.cc  J4DEggGel.cc  J4DEggGelHit.cc  J4DEggGelSD.cc  J4DEggInside.cc  J4DEggParameterList.cc  J4DEggShield.cc
sources/degg/src/.svn/: all-wcprops
sources/degg/src/.svn/text-base/: J4DOMBenthos.cc.svn-base  J4DOMMaterialStore.cc.svn-base  J4DOMPMT.cc.svn-base  J4DOMPMTSD.cc.svn-base  J4VDOMDetectorComponent.cc.svn-base
sources/dom/: CMakeLists.txt
sources/dom/include/: J4DOMInside.hh  J4DOMPMTHit.hh  J4DOMParameterList.hh
sources/dom/src/: J4DOMGel.cc  J4DOMHarness.cc  J4DOMPMT.cc  J4DOMPMTHit.cc  J4DOMPMTHit.cc~  J4DOMPMTSD.cc  J4DOMParameterList.cc  J4DOMPhotoCathode.cc
sources/exp/: CMakeLists.txt
sources/exp/include/: J4CAINEvtInterface.hh  J4CAINEvtMessenger.hh  J4CircleBeam.hh  J4CircleBeamMessenger.hh  J4DetectorConstruction.hh  J4EXPHall.hh  J4EventAction.hh  J4HEPEvtInterface.hh  J4HEPEvtMessenger.hh  J4ParameterList.hh  J4ParticleBeam.hh  J4ParticleBeamMessenger.hh  J4PhysicsList.hh  J4PhysicsListMessenger.hh  J4PrimaryGeneratorAction.hh  J4PrimaryGeneratorMessenger.hh  J4RunAction.hh  J4RunActionMessenger.hh  J4TrackingAction.hh  J4TrackingActionMessenger.hh
sources/exp/src/: J4CAINEvtInterface.cc  J4CAINEvtMessenger.cc  J4CircleBeam.cc  J4CircleBeamMessenger.cc  J4DetectorConstruction.cc  J4EXPHall.cc  J4EventAction.cc  J4HEPEvtInterface.cc  J4HEPEvtMessenger.cc  J4ParameterList.cc  J4ParticleBeam.cc  J4ParticleBeamMessenger.cc  J4PhysicsList.cc  J4PhysicsList.cc.orig  J4PhysicsListMessenger.cc  J4PrimaryGeneratorAction.cc  J4PrimaryGeneratorMessenger.cc  J4RunAction.cc  J4RunActionMessenger.cc  J4TrackingAction.cc  J4TrackingActionMessenger.cc
sources/kern/: CMakeLists.txt
sources/kern/include/: J4AttMFieldMap.hh  J4AttPV.hh  J4Global.hh  J4GlobalMessenger.hh  J4MFieldMapStore.hh  J4MaterialCatalog.hh  J4MaterialCatalog.icc  J4Named.hh  J4Object.hh  J4Output.hh  J4PVPlacement.hh  J4PVReplica.hh  J4ParameterListStore.hh  J4SubtractionSolid.hh  J4Timer.hh  J4TypeDef.hh  J4VAcceleratorComponent.hh  J4VComponent.hh  J4VComponent.hh~  J4VDetectorComponent.hh  J4VFunction.hh  J4VHit.hh  J4VMField.hh  J4VMaterialStore.hh  J4VParameterList.hh  J4VSD.hh  J4VSensitiveDetector.hh  J4VTrackerHit.hh  J4VisManager.hh  TBookKeeper.hh  defs.h  tpordvec.h  tpordvec.icc
sources/kern/src/: J4AttMFieldMap.cc  J4Global.cc  J4GlobalMessenger.cc  J4MFieldMapStore.cc  J4MaterialCatalog.cc  J4Named.cc  J4Object.cc  J4ParameterListStore.cc  J4SubtractionSolid.cc  J4Timer.cc  J4VAcceleratorComponent.cc  J4VComponent.cc~  J4VDetectorComponent.cc  J4VFunction.cc  J4VHit.cc  J4VMField.cc  J4VMaterialStore.cc  J4VParameterList.cc  J4VSensitiveDetector.cc  J4VTrackerHit.cc  J4VisManager.cc
sources/lom/: CMakeLists.txt
sources/lom/include/: J4LOM.hh  J4LOMGel.hh  J4LOMGelHit.hh  J4LOMGelSD.hh  J4LOMInside.hh  J4LOMInsideHit.hh  J4LOMInsideSD.hh  J4LOMParameterList.hh
sources/lom/include/.svn/text-base/: J4DOMPMT.hh.svn-base  J4DOMPMTHit.hh.svn-base
sources/lom/src/: J4LOM.cc  J4LOMGel.cc  J4LOMGelHit.cc  J4LOMGelSD.cc  J4LOMInside.cc  J4LOMParameterList.cc
sources/lom/src/.svn/text-base/: J4DOM.cc.svn-base  J4DOMParameterList.cc.svn-base
sources/megg/: CMakeLists.txt
sources/megg/.svn/: all-wcprops
sources/megg/include/: J4MEgg.hh  J4MEggGel.hh  J4MEggGelHit.hh  J4MEggGelSD.hh  J4MEggInside.hh  J4MEggInsideHit.hh  J4MEggInsideSD.hh  J4MEggParameterList.hh
sources/megg/include/.svn/: all-wcprops
sources/megg/include/.svn/text-base/: J4DOM.hh.svn-base  J4DOMBenthos.hh.svn-base  J4DOMGel.hh.svn-base  J4DOMHarness.hh.svn-base  J4DOMMainBoard.hh.svn-base  J4DOMMaterialStore.hh.svn-base  J4DOMParameterList.hh.svn-base
sources/megg/src/: .J4MEggParameterList.cc.swp  J4MEgg.cc  J4MEggGel.cc  J4MEggGelHit.cc  J4MEggGelSD.cc  J4MEggInside.cc  J4MEggParameterList.cc
sources/megg/src/.svn/: entries
sources/megg/src/.svn/text-base/: J4DOMInside.cc.svn-base  J4DOMMainBoard.cc.svn-base  J4DOMPMTHit.cc.svn-base
sources/parts/include/: J43inchPMT.hh  J43inchPMTBase.hh  J43inchPMTCathode.hh  J43inchPMTCathodeSD.hh  J43inchPMTHit.hh  J43inchPMTSD.hh  J44inchPMT.hh  J44inchPMTBase.hh  J44inchPMTCathode.hh  J44inchPMTCathodeSD.hh  J44inchPMTHit.hh  J44inchPMTSD.hh  J48inchPMT.hh  J48inchPMTHit.hh  J48inchPMTSD.hh  J4Bubble.hh  J4BubbleColumn.hh  J4ChargeResponse.hh  J4EggHarness.hh  J4EggOkamotoGlass.hh  J4EggOkamotoGlassHit.hh  J4EggOkamotoGlassSD.hh  J4EggSolidMaker.hh  J4ElectricBoard.hh  J4Flasher.hh  J4LOMOkamotoGlass.hh  J4LOMOkamotoGlassHit.hh  J4LOMOkamotoGlassSD.hh  J4LOMSolidMaker.hh  J4PMTSolidMaker.hh  J4PartsMaterialStore.hh  J4PartsParameterList.hh
sources/parts/src/: J43inchPMT.cc  J43inchPMTBase.cc  J43inchPMTCathode.cc  J43inchPMTCathodeSD.cc  J43inchPMTHit.cc  J43inchPMTSD.cc  J44inchPMT.cc  J44inchPMTBase.cc  J44inchPMTCathode.cc  J44inchPMTCathodeSD.cc  J44inchPMTHit.cc  J44inchPMTSD.cc  J48inchPMT.cc  J48inchPMTHit.cc  J48inchPMTSD.cc  J4BubbleColumn.cc  J4Bubbles.cc  J4ChargeResponse.cc  J4EggHarness.cc  J4EggOkamotoGlass.cc  J4EggOkamotoGlassHit.cc  J4EggOkamotoGlassSD.cc  J4EggSolidMaker.cc  J4ElectricBoard.cc  J4Flasher.cc  J4LOMOkamotoGlass.cc  J4LOMOkamotoGlassHit.cc  J4LOMOkamotoGlassSD.cc  J4LOMSolidMaker.cc  J4PMTSolidMaker.cc  J4PartsMaterialStore.cc  J4PartsParameterList.cc
(+75 files in other folders)
