#-----------------------------------------------------------------------
# CMakeLists.txt
# Module : dominant
#
# Top level CMakeLists.txt for a dominant
#
# Generated on : 12/11/2014
#
# $Id: CMakeLists.txt 69106 2013-04-18 13:05:15Z hoshina$
#
#-----------------------------------------------------------------------

MESSAGE("adding sub directories") 

add_subdirectory(kern)
add_subdirectory(exp)
#add_subdirectory(dom)
#add_subdirectory(degg)
add_subdirectory(lom)


